# dodjtime

./: .gitignore  Cargo.toml  Embed.toml  erase_and_flash_softdevice.sh  memory.x
.cargo/: config
data/fonts/raw/: font.xcf
data/pictures/: clock_bg.rgb565  stardew-chickens-240x240.rgb565  stardew-chickens.xcf  stardew_240x240.rgb565  valley_cropped.rs
enigita/: Cargo.toml
enigita/enigita-compiletime/: Cargo.toml
enigita/enigita-compiletime/src/: lib.rs
enigita/src/: lib.rs
font-convert/: Cargo.toml
font-convert/src/: gen.rs  main.rs
src/: battery.rs  ble.rs  channel.rs  display.rs  main.rs  power_button.rs  time.rs  timer.rs
src/display/: text.rs
tools/: Cargo.toml
tools/src/: font.rs  main.rs
