[package]
name = "dodjtime"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52832-hal = { version = "0.12.1", features = ["rt"] }
embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m = "0.7.1"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
#display-interface-spi = "0.4.0"
#st7789 = "0.5.0"
#embedded-graphics = "0.6.2"
async-embedded = { path = "../../contrib/async-on-embedded/async-embedded" }
heapless = "0.6.1"
chrono = { version = "0.4.19", default-features = false }

[patch.crates-io]
nrf52832-hal = { path = "../../contrib/nrf-hal/nrf52832-hal" }
