[package]
name = "dodjtime"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nrf52832-hal = { version = "0.12.1", features = ["rt"] }
#embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m = "0.7.1"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
#display-interface-spi = "0.4.0"
#st7789 = "0.5.0"
embedded-graphics = "0.6.2"
heapless = "0.6.1"
chrono = { version = "0.4.19", default-features = false }
embassy = { path = "../../contrib/embassy/embassy" }
embassy-extras = { path = "../../contrib/embassy/embassy-extras" }
embassy-nrf = { path = "../../contrib/embassy/embassy-nrf", features = ["52832"] }
pin-utils = "0.1.0"
futures = { version = "0.3.13", default-features = false, features = ["async-await"] }
enigita = { version = "0.1.0", path = "enigita" }


#[build-dependencies]
#enigita-compiletime = { version = "0.1.0", path = "enigita/enigita-compiletime" }
#build_rs = { version = "0.1.0", path = "../build_rs" }
#anyhow = "1.0.40"

[patch.crates-io]
#nrf52832-hal = { path = "../../contrib/nrf-hal/nrf52832-hal" }

[profile.release]
#debug = true

[workspace]
members = [
    ".",
    "tools",
]
