[package]
name = "enigita"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
staticvec = { version = "0.10.6", default-features = false }
embedded-graphics = "0.6.2"
