[package]
name = "font-convert"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.10.0"
structopt = "0.3.21"
qu = "0.3.1"
ab_glyph = "0.2.12"
