[package]
name = "enigita-compiletime"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
image = "0.23.14"
byteorder = "1.4.3"
embedded-graphics = "0.6.2"
